--- a/talk/predator-prey-model-talk/index.html
+++ b/talk/predator-prey-model-talk/index.html
@@ -614,7 +614,7 @@
 
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 720px;">
   <div style="position: relative">
-    <img src="/talk/predator-prey-model-talk/featured_hu0fbc8197e2c29bf6d2dc7f842f3257a9_73654_720x0_resize_q90_lanczos.jpg width="200" height="100" alt="" class="featured-image">
+    <img src="/talk/predator-prey-model-talk/featured_hu0fbc8197e2c29bf6d2dc7f842f3257a9_73654_720x0_resize_q90_lanczos.jpg alt="" class="featured-image">
     
   </div>
 </div>
